# Zurui

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  Main.qml  Project Architecture and Guidelines.md  README.md  README_jap.md  README_ukr.md  main.cpp  run.sh  toolchain-windows.cmake
.github/: FUNDING.yaml
.github/workflows/: codeql.yml
MsQuic/include/: msquic.h  msquic_posix.h  quic_sal_stub.h
authentication_manager/: authentication_manager.cpp  authentication_manager.h  authentication_worker.cpp  authentication_worker.h
encryption_manager/: encryption_manager.h
key_bindings/: CMakeLists.txt  key_binding_manager.cpp  key_binding_manager.h  key_binding_worker.h
preloading_manager/: CMakeLists.txt  preloading_manager.cpp  preloading_manager.h  preloading_worker.cpp  preloading_worker.h
surface_manager/: CMakeLists.txt  surface.cpp  surface.h  surface_manager.cpp  surface_manager.h
systray/: CMakeLists.txt  systray.cpp  systray.h
theme-manager/: CMakeLists.txt  theme_manager.cpp  theme_manager.h
theme_manager/: CMakeLists.txt  live_update_xt.cpp  live_update_xt.h  live_xt_worker.cpp  live_xt_worker.h  theme_manager.cpp  theme_manager.h
themes/hina/: conf.qml
themes/hoshino/auth/: login.qml  signup.qml
themes/hoshino/main/: canvas.qml
translation_tools/: CMakeLists.txt  translation_manager.cpp  translation_manager.h
translation_tools/translations/: note.md  translations_en.ts  translations_ja.ts  translations_ua.ts
ui_components/: CMakeLists.txt  SignIn.qml  SignUp.qml  sign_in.qml
ui_components/components/: AuthButton.qml  CTextInput.qml
ui_components/materials/: blur_material.h
ui_components/shaders/: BlurShader.frag  BlurShader.vert  blur.frag  boxblur.frag  circle.frag
ui_themes/: README.md
ui_themes/zurui_dark/: CMakeLists.txt  conf.qml
ui_themes/zurui_light/: CMakeLists.txt  conf.qml
vpn_manager/: CMakeLists.txt  vpn_manager.cpp  vpn_manager.h
zurui_client/: CMakeLists.txt  client_worker.cpp  client_worker.h  zurui_client.cpp  zurui_client.h
